# svFSIplus

./: .clang-format  .gitattributes  .gitignore  .licenserc.json  CMakeLists.txt  README.md  _array3_8h_source.html  _array_8h_source.html  _cep_mod_8h_source.html  _cep_mod_ap_8h_source.html  _cep_mod_bo_8h_source.html  _cep_mod_fn_8h_source.html  _cep_mod_ttp_8h_source.html  _chnl_mod_8h_source.html  _cm_mod_8h_source.html  _com_mod_8h_source.html  _debug_msg_8h_source.html  _formulas.tex  _formulas_dark.tex  _fsils_linear_algebra_8h_source.html  _l_p_n_solver_interface_8h_source.html  _linear_algebra_8h_source.html  _parameters_8h_source.html  _petsc_linear_algebra_8h_source.html  _sim_vascular_8h_source.html  _simulation_8h_source.html  _simulation_logger_8h_source.html  _tensor4_8h_source.html  _timer_8h_source.html  _trilinos_linear_algebra_8h_source.html  _vector_8h_source.html  _vtk_data_8h_source.html  add__bc__mul_8h_source.html  all__fun_8h_source.html  annotated.html  back_2add__bc__mul_8h_source.html  back_2bcast_8h_source.html  back_2bicgs_8h_source.html  back_2cgrad_8h_source.html  back_2commu_8h_source.html  (+838 more)
.github/: codecov.yml
.github/workflows/: buildtest.yml  codechecks.yml  copyright.yml  docker_solver_build.yml  documentation.yml  git_lfs.yml  git_lfs_check.yml  test.yml  test_docker.yml  test_lib.yml  test_macos.yml  test_macos12.yml  test_ubuntu.yml  test_ubuntu20.yml  test_ubuntu22.yml
Code/: CMakeLists.txt
Code/CMake/: LINEAR_SOLVERConfig.cmake  SimVascularDependentOptions.cmake  SimVascularExternals.cmake  SimVascularInternals.cmake  SimVascularMacros.cmake  SimVascularOptions.cmake  SimVascularThirdParty.cmake
Code/Scripts/: CMakeLists.txt
Code/Source/: CMakeLists.txt  Development.md  README.md
Code/Source/Include/: SimVascular.h  cvFlowsolverOptions.h.in  simvascular_options.h.in  simvascular_version.h.in
Code/Source/liner_solver/: CMakeLists.txt  README.md  add_bc_mul.cpp  add_bc_mul.h  bcast.cpp  bcast.h  bicgs.cpp  cgrad.cpp  cgrad.h  commu.cpp  commu.h  cput.cpp  dot.cpp  dot.h  fils_struct.cpp  fils_struct.hpp  fsils.hpp  fsils_api.hpp  fsils_std.h  ge.cpp  ge.h  gmres.cpp  gmres.h  in_commu.cpp  lhs.cpp  lhs.h  ls.cpp  norm.cpp  norm.h  ns_solver.cpp  ns_solver.h  omp_la.cpp  omp_la.h  pc_gmres.cpp  pc_gmres.h  precond.cpp  precond.h  spar_mul.cpp  spar_mul.h
Code/Source/solver/: Array.cpp  Array.h  Array3.cpp  Array3.h  CMakeLists.txt  CepMod.cpp  CepMod.h  CepModAp.cpp  CepModAp.h  CepModBo.cpp  CepModBo.h  CepModFn.cpp  CepModFn.h  CepModTtp.cpp  CepModTtp.h  ChnlMod.cpp  ChnlMod.h  CmMod.cpp  CmMod.h  ComMod.cpp  ComMod.h  DebugMsg.h  LinearAlgebra.cpp  LinearAlgebra.h  Parameters.cpp  Parameters.cpp.orig  Parameters.h  SPLIT.c  SimulationLogger.h  Tensor4.cpp  Timer.h  TrilinosLinearAlgebra.cpp  TrilinosLinearAlgebra.h  Vector.cpp  Vector.h  VtkData.cpp  VtkData.h  all_fun.cpp  baf_ini.cpp  baf_ini.h  (+81 more)
Code/Source/solver/svZeroD_interface/: LPNSolverInterface.cpp  LPNSolverInterface.h  lpn_interface.cpp
Code/Source/svFSI/: .CMakeLists.txt.swp  Array.cpp  Array.h  Array3.cpp  Array3.h  CMakeLists.txt  CepMod.cpp  CepMod.h  CepModAp.cpp  CepModAp.h  CepModBo.cpp  CepModBo.h  CepModFn.cpp  CepModFn.h  CepModTtp.cpp  CepModTtp.h  ChnlMod.cpp  ChnlMod.h  CmMod.cpp  CmMod.h  ComMod.cpp  ComMod.h  DebugMsg.h  FsilsLinearAlgebra.cpp  FsilsLinearAlgebra.h  LinearAlgebra.cpp  LinearAlgebra.h  LinearSolver.cpp  LinearSolver.h  Parameters.cpp  Parameters.cpp.orig  Parameters.h  PetscLinearAlgebra.cpp  PetscLinearAlgebra.h  PetscLinearSolver.cpp  PetscLinearSolver.h  README.md  SPLIT.c  Simulation.cpp  Simulation.h  (+130 more)
Code/Source/svFSI/svZeroD_interface/: LPNSolverInterface.cpp  LPNSolverInterface.h  lpn_interface.cpp
Code/Source/svFSILS/: CMakeLists.txt  add_bc_mul.cpp  add_bc_mul.h  bc.cpp  bcast.cpp  bcast.h  bicgs.cpp  bicgs.h  cgrad.cpp  cgrad.h  commu.cpp  commu.h  cput.cpp  dot.cpp  dot.h  fils_struct.cpp  fils_struct.hpp  fsils.hpp  fsils_api.hpp  fsils_std.h  ge.cpp  ge.h  gmres.cpp  gmres.h  in_commu.cpp  lhs.cpp  lhs.h  ls.cpp  norm.cpp  norm.h  ns_solver.cpp  ns_solver.h  omp_la.cpp  omp_la.h  pc_gmres.cpp  pc_gmres.h  precond.cpp  precond.h  solve.cpp  spar_mul.cpp  (+1 more)
Code/Source/svFSILS/back/: add_bc_mul.cpp  bcast.cpp  bicgs.cpp  cgrad.cpp  commu.h  cput.cpp  dot.cpp  dot.h  fils_struct.cpp  fils_struct.hpp  fsils_std.h  norm.cpp  ns_solver.cpp  pc_gmres.cpp  pc_gmres.h  solve.cpp  spar_mul.cpp  t
Distribution/: CMakeLists.txt
Docker/: README.md  dockerfile  dockeru20  dockeru22
Docker/solver/: dockerfile
Docker/ubuntu20/: dockerfile
Docker/ubuntu20-on-mac-host/: dockerfile
Docker/ubuntu22/: dockerfile
Docker/ubuntu22-on-mac-host/: dockerfile
Documentation/: Doxyfile  DoxygenLayout.xml  doxygen-awesome.css  internal.md  references.bib
Documentation/pages/: implementation.md  main.md
build-petsc/: CMakeCache.txt  Makefile  cmake_install.cmake
build-petsc/Externals-build/: CMakeCache.txt  Makefile  cmake_install.cmake
build-petsc/svFSI-build/: CMakeCache.txt  Makefile  cmake_install.cmake
example/: P1_svFSI.inp  P1_svFSI.xml  P1_svFSI_1.inp  P1_svFSI_petsc.inp  P1_svFSI_petsc.xml  P2_svFSI.xml  direct.inp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+81 more)
tests/: README.md  conftest.py  test_cep.py  test_cmm.py  test_fluid.py  test_fsi.py  test_heats.py  test_integration.py  test_shell.py  test_stokes.py  test_struct.py  test_ustruct.py  testing.md
tests/unitTests/: CMakeLists.txt  hello_test.cpp  test.cpp  test.h  unitTest.xml
tests/unitTests/mesh/: unit_cube_volume.vtu
tests/unitTests/mesh/unitCube/mesh_surfaces/: X0.vtp  X1.vtp  Y0.vtp  Y1.vtp  Z0.vtp  Z1.vtp  top_face.vtp
(+900 files in other folders)
